# tattler

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
docs/superpowers/plans/: 2026-05-25-discord-embeds.md  2026-05-25-tattler.md
docs/superpowers/specs/: 2026-05-25-discord-embeds-design.md  2026-05-25-tattler-design.md  2026-05-29-invite-rules-design.md
helm/tattler/: Chart.yaml  values.yaml
helm/tattler/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml
src/tattler/: __main__.py  bus.py  discord_client.py  events.py  health.py  invites.py  matcher.py
src/tattler/config/: loader.py  models.py  watcher.py
src/tattler/notifier/: rate_limit.py  status.py  template.py  worker.py
src/tattler/notifier/webhooks/: base.py  discord.py  dispatcher.py  generic.py
tests/integration/: test_invites.py  test_pipeline.py
tests/unit/: test_config_invite_rules.py  test_config_loader.py  test_config_models.py  test_config_watcher.py  test_dispatcher.py  test_health.py  test_invite_extract.py  test_invite_resolver.py  test_matcher.py  test_matcher_invites.py  test_notifier_worker.py  test_rate_limit.py  test_shutdown_drain.py  test_status.py  test_template.py  test_template_invite.py  test_webhooks_discord.py  test_webhooks_generic.py
