[project]
name = "tattler"
version = "0.1.0"
description = "Discord self-bot that observes messages, matches regex rules, and dispatches webhooks."
requires-python = ">=3.12"
dependencies = [
    "discord.py-self>=2.0.0",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "httpx>=0.27",
    "watchfiles>=0.21",
]

[project.scripts]
tattler = "tattler.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tattler"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
